deploy/caddy/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy-deployment
  labels:
    app: caddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
        - name: caddy
          image: caddy:2-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/caddy/Caddyfile
              name: caddy-config
              subPath: Caddyfile
      volumes:
        - name: caddy-config
          configMap:
            name: caddy-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: caddy-service
spec:
  selector:
    app: caddy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: nocf.owenyoung.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-service
                port:
                  number: 80
    - host: webhook.k3s.owenyoung.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy-ingress-https

  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencryptresolver
spec:
  ingressClassName: traefik

  rules:
    - host: vv.owenyoung.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-service
                port:
                  number: 80
